--- a/style.css
+++ b/style.css
@@ -10,19 +10,197 @@ nav:li {
   position:fixed;
 }
 
+
+/* NAV BAR DESIGN
+
+
+/* Menu Dropdown */
+
+
+.cf:before,
+.cf:after {
+    content: " ";
+    display: table;
+}
+
+.cf:after {
+    clear: both;
+}
+
+.cf {
+    *zoom: 1;
+}
+
+.menu,
+.submenu {
+ margin: 0;
+ padding: 0;
+ list-style: none;
+}
+
+.menu {   
+ margin: 50px auto;
+ width: 800px;   
+ width: -moz-fit-content;
+ width: -webkit-fit-content;
+ width: fit-content; 
+}
+
+.menu > li {
+ background: #000;
+ float: left;
+ position: relative;
+ transform: skewX(25deg);
+}
+
+.menu a {
+ display: block;
+ color: #fff;
+ text-transform: uppercase;
+ text-decoration: none;
+ font-family: Arial, Helvetica;
+ font-size: 14px;
+}  
+
+.menu li:hover {
+ background: #e74c3c;
+}  
+
+.menu > li > a {
+ transform: skewX(-25deg);
+ padding: 1em 2em;
+}
+
+/* Dropdown */
+.submenu {
+ position: absolute;
+ width: 200px;
+ left: 50%; margin-left: -100px;
+ transform: skewX(-25deg);
+ transform-origin: left top;
+}
+
+.submenu li {
+ background-color: #34495e;
+ position: relative;
+ overflow: hidden;  
+}      
+
+.submenu > li > a {
+ padding: 1em 2em;   
+}
+
+.submenu > li::after {
+ content: '';
+ position: absolute;
+ top: -125%;
+ height: 100%;
+ width: 100%;   
+ box-shadow: 0 0 50px rgba(0, 0, 0, .9);   
+}  
+
+.submenu > li:nth-child(odd){
+ transform: skewX(-25deg) translateX(0);
+}
+
+.submenu > li:nth-child(odd) > a {
+ transform: skewX(25deg);
+}
+
+.submenu > li:nth-child(odd)::after {
+ right: -50%;
+ transform: skewX(-25deg) rotate(3deg);
+}    
+
+.submenu > li:nth-child(even){
+ transform: skewX(25deg) translateX(0);
+}
+
+.submenu > li:nth-child(even) > a {
+ transform: skewX(-25deg);
+}
+
+.submenu > li:nth-child(even)::after {
+ left: -50%;
+ transform: skewX(25deg) rotate(3deg);
+}
+
+/* Show dropdown */
+.submenu,
+.submenu li {
+ opacity: 0;
+ visibility: hidden;   
+}
+
+.submenu li {
+ transition: .2s ease transform;
+}
+
+.menu > li:hover .submenu,
+.menu > li:hover .submenu li {
+ opacity: 1;
+ visibility: visible;
+}  
+
+.menu > li:hover .submenu li:nth-child(even){
+ transform: skewX(25deg) translateX(15px);   
+}
+
+.menu > li:hover .submenu li:nth-child(odd){
+ transform: skewX(-25deg) translateX(-15px);   
+}
+
+ /* END OF NAVBAR DESIGN */
+
+
+#BIO {
+  margin:auto;
+  position: relative;
+  align-items: center;
+  text-align: center;
+}*/
+
+.About_Me {
+  margin: 5%; 
+  padding: 2%;
+  text-align: center;
+}
+
+.image-container img{
+  width: 250px;
+}
+
+.bio-text{
+  width: 400px;
+  text-align: center;
+  margin: auto;
+}
+
+.bio-text p{
+  font-size: 110%;
+}
+
+#DATA-SCIENCE-PROJECTS {
+ text-align: center;
+}
+
+
+.Profiles {
+  display: flex;
+  justify-content: center;
+  height: auto;
+  width:auto;
+}
 .gmail img {
   width: 100px;
 }
 
-.Linkedin{
-  border:none;
-}
 .Linkedin img {
   width: 100px;
 }
 
 .Github img{
-  width: 185px;
+  width: 165px;
 }
 
 #Data-Science {
@@ -82,8 +260,8 @@ i {
   border: 5px solid gray;
   /*position: relative;*/
   /*cursor: pointer; */
-  /*height: 685px;*/
-  height: 725px;
+  height: 650px;
+  /*height: 725px;*/
 }
 
 
@@ -91,7 +269,7 @@ i {
 
 .box-image img {
   width: 100%;
-  height: auto;
+  height: 125px;
   display: block;
   margin-bottom: 10px;
 }
@@ -135,4 +313,18 @@ i {
   .button-43 {
     padding: 1rem 2rem;
   }
+}
+
+
+/* SCROLL TO TOP*/
+.scroll-up {
+  position: fixed;
+  right: 0.5%;
+  bottom: 3%;
+  cursor: pointer;
+}
+
+.up-arrow {
+  width: 3rem;
+  height: 3rem;
 }
